--- a/dancefloor.html
+++ b/dancefloor.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Object Dance Party</title>
+    <title>Rick and Morty Dance Party</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/rickDancer.js"></script>
+    <script src="src/mortyDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
-      <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="changeDimensionButton title" data-dimension-changer-function-name="changeDimension">Change Dimension</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeRickDancer">add a Dancing Rick</a> 
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeMortyDancer">add a Dancing Morty</a> 
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeRandomDancer">add a Random Dancer</a>
+    </div>
+    <img src="danceGifs/portal.gif" class="portal">
     <script src="src/init.js"></script>
   </body>
 </html>
